--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
   </head>
   <body>
     <div class="hero-image">
+      <img class="menub" id="mb" src="/menu.png" />
+      <div class="taskbar" id="tb">
+        <button class="home" id="home">Home</button>
+        <button>Events</button>
+        <button>Awards</button>
+        <button>Reviews</button>
+        <button>Gallery</button>
+        <button>Instructors</button>
+        <button>Contact</button>
+        <div id="google_translate_element" class="trans"></div>
+        <script type="text/javascript">
+          function googleTranslateElementInit() {
+            new google.translate.TranslateElement(
+              { pageLanguage: "en" },
+              "google_translate_element"
+            );
+          }
+        </script>
+
+        <script
+          type="text/javascript"
+          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+        ></script>
+      </div>
       <div class="hero-text">
         <h1>NIRAMAY YOG KENDRA</h1>
         <h3>निरामय योग केंद्र</h3>
@@ -132,11 +156,106 @@
     <div class="review">
       <h1>Reviews and Experiences / मनोगत व अनुभव</h1>
       <div class="grid">
-        <div class="gridr"></div>
-        <div class="gridr"></div>
-        <div class="gridr"></div>
-        <div class="gridr"></div>
+        <div class="gridr">
+          <img class="rda" src="/rev1.png" />
+
+          <h2>
+            The lockdown due to COVID has altered the traditional
+            teaching-learning mechanisms with the e-learning.. thank you mam..
+            for making a differerence. and accepting this challenge..it requires
+            strong self motivation. you are conducting the classes very
+            nicely..Bravo for your initiative.
+          </h2>
+          <h3>Utkarsha Deshmukh</h3>
+          <h4>Yog Pravesh Varg</h4>
+        </div>
+        <div class="gridr">
+          <img class="rda" src="/rev2.png" />
+          <h2>
+            Before this class I was quite depressed.There was some kind of fear
+            inside me. But after this class I have become very much confident.
+            That one sentence during yognidra that I will study regularly and
+            will pass all the exams gives lot of courage. Thank you so much
+            ma'am for arranging this program
+          </h2>
+          <h3>Snehal pawar</h3>
+          <h4>Confidence building session</h4>
+        </div>
+        <div class="gridr">
+          <img class="rda" src="/rev3.png" />
+          <h2>
+            वैशाली मॅडम यांच्याशी योग प्रवेश वर्गाच्या निमित्ताने ओळख झाली.
+            त्यांच्यामुळेच योगामध्ये विशेष आवड निर्माण झाली. अहिरे मॅडम अतिशय
+            उत्कृष्ट योग शिक्षक आहेत. योग साधकांसाठी अतिशय खडतर व सातत्याने
+            परिश्रम घेत असतात. त्यांनी घेतलेल्या योगवर्गांमुळे संपूर्ण
+            महाराष्ट्रातील कान्या कोपऱ्यात योग पोहचण्यास मदत झाली आहे.
+          </h2>
+          <h3>शीतल जगताप.</h3>
+          <h4>Yog Pravesh Varg</h4>
+        </div>
+        <div class="gridr">
+          <img class="rda4" src="/rev4.jpg" />
+          <button>View all Reviews</button>
+        </div>
       </div>
     </div>
+
+    <div class="gallery">
+      <h1>Events Gallery</h1>
+      <div class="grid">
+        <div class="gridg"><img class="imgo" src="/ycb.png" /></div>
+        <div class="gridg"><img class="imgo" src="/ycb.png" /></div>
+        <div class="gridg"><img class="imgo" src="/ycb.png" /></div>
+        <div class="gridg">
+          <img class="imgo" src="/ycb.png" /><img class="nx" src="/nx.png" />
+        </div>
+      </div>
+    </div>
+    <div class="teacher">
+      <h1>Instructors</h1>
+      <div class="grid">
+        <div class="gridi">
+          <img src="/in1.png" />
+          <h2>Mrs. Vaishali Ahire</h2>
+          <div class="grida">
+            <h3 class="degv I">Yog Shikshak</h3>
+            <h3 class="degv II">Yog Adyapak</h3>
+            <h3 class="degv III">Yog Adyapak</h3>
+            <h3 class="degv IV">Yog Adyapak</h3>
+            <h3 class="degv V">Yog Adyapak</h3>
+            <h3 class="degv VI">View Profile</h3>
+          </div>
+          <h4>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has and scrambled
+            it to make a type specimen book. It has and scrambled it to make a
+            type specimen book. It has
+          </h4>
+        </div>
+        <div class="gridi">
+          <img src="/in1.png" />
+          <h2>Dr. Milind Ahire</h2>
+          <div class="grida">
+            <h3 class="degv I">Yog Shikshak</h3>
+            <h3 class="degv II">Yog Adyapak</h3>
+            <h3 class="degv III">Yog Adyapak</h3>
+            <h3 class="degv IV">Yog Adyapak</h3>
+            <h3 class="degv V">Yog Adyapak</h3>
+            <h3 class="degv VI">View Profile</h3>
+          </div>
+          <h4>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book. It has and scrambled
+            it to make a type specimen book. It has and scrambled it to make a
+            type specimen book. It has
+          </h4>
+        </div>
+      </div>
+    </div>
+    <script src="yog.js"></script>
   </body>
 </html>
